--- a/src/app/modules/wallet/v2/settings-btc/settings-btc.component.html
+++ b/src/app/modules/wallet/v2/settings-btc/settings-btc.component.html
@@ -37,49 +37,47 @@
       [formGroup]="form"
       class="m-walletButtonLayout--buttonOffsetRight"
     >
-      <div class="m-walletForm__wrapper">
-        <div class="m-walletForm__fieldsContainer">
-          <div class="m-walletForm__field--text stretchedField">
-            <div class="m-walletForm__row--label m-walletTertiaryText--label">
-              <label for="addressInput" i18n>Bitcoin Address</label>
-              <m-tooltip icon="help">
-                <ng-container i18n
-                  >Enter the public address from your own Bitcoin wallet which
-                  will be used to receive Bitcoin payments on Minds. Minds does
-                  not store your Bitcoin.</ng-container
-                >
-              </m-tooltip>
-            </div>
-            <div
-              class="m-walletForm__row--input"
-              [ngClass]="{
-                invalid:
-                  (form.dirty || form.touched) &&
-                  addressInput.hasError('format')
-              }"
-            >
-              <input
-                type="text"
-                id="addressInput"
-                name="addressInput"
-                formControlName="addressInput"
-                class="form-control"
-                [readonly]="inProgress"
-                autofocus
-              />
-            </div>
-            <div class="m-walletForm__row--validation">
-              <p
-                *ngIf="
-                  (form.dirty || form.touched) &&
-                  addressInput.hasError('format')
-                "
+      <div class="m-walletForm__fieldsContainer">
+        <div class="m-walletForm__field--text stretchedField">
+          <div class="m-walletForm__row--label m-walletTertiaryText--label">
+            <label for="addressInput" i18n>Bitcoin Address</label>
+            <m-tooltip icon="help">
+              <ng-container i18n
+                >Enter the public address from your own Bitcoin wallet which
+                will be used to receive Bitcoin payments on Minds. Minds does
+                not store your Bitcoin.</ng-container
               >
-                Invalid address format
-              </p>
-            </div>
+            </m-tooltip>
+          </div>
+          <div
+            class="m-walletForm__row--input"
+            [ngClass]="{
+              invalid:
+                (form.dirty || form.touched) && addressInput.hasError('format')
+            }"
+          >
+            <input
+              type="text"
+              id="addressInput"
+              name="addressInput"
+              formControlName="addressInput"
+              class="form-control"
+              [readonly]="inProgress"
+              autofocus
+            />
+          </div>
+          <div class="m-walletForm__row--validation">
+            <p
+              *ngIf="
+                (form.dirty || form.touched) && addressInput.hasError('format')
+              "
+            >
+              Invalid address format
+            </p>
           </div>
         </div>
+      </div>
+      <div class="m-walletForm__buttonsContainer">
         <m-shadowboxSubmitButton
           [disabled]="
             inProgress ||
