--- a/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
+++ b/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
@@ -103,9 +103,7 @@
   &[disabled] {
     cursor: default;
     &:not(.saving) {
-      @include m-theme() {
-        background-color: themed($m-grey-100);
-      }
+      opacity: 0.6;
     }
   }
 }
