--- a/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/cash-bank-form/cash-bank-form.component.html
@@ -1,9 +1,24 @@
 <div class="m-walletCashBankForm" *ngIf="account">
-  <!-- HAS NOT SET UP BANK ACCOUNT / IS UPDATING BANK ACCOUNT ------------------ -->
-  <ng-container *ngIf="!leftMonetization">
-    <form [formGroup]="form" *ngIf="!hasBankAccount() || editing">
-      <p>Finish adding your bank details to start receiving cash payouts.</p>
-      <!-- ***INPUT COUNTRY DROPDOWN-->
+  <!-- -------------------------------------------- -->
+  <!--- BANK ACCOUNT IS NOT YET SET UP --------------->
+  <!--- OR IS BEING UPDATED-------- ------------------>
+  <!-- -------------------------------------------- -->
+  <!-- <ng-container *ngIf="!leftMonetization"> -->
+  <!-- -------------------------------------------- -->
+  <!--- FORM ----------------------------------------->
+  <!-- -------------------------------------------- -->
+  <form
+    [formGroup]="form"
+    class="m-walletButtonLayout--buttonOffsetRight"
+    *ngIf="!hasBankAccount() || editing"
+  >
+    <p class="m-walletTertiaryText--desc">
+      Finish adding your bank details to start receiving cash payouts.
+    </p>
+    <div class="m-walletForm__fieldsContainer">
+      <!-- -------------------------------------------- -->
+      <!--- INPUT - COUNTRY DROPDOWN---------------------->
+      <!-- -------------------------------------------- -->
       <div class="m-walletForm__field--text stretchedField">
         <div class="m-walletSettings__row--label">
           <label for="country" i18n>Country</label>
@@ -19,20 +34,11 @@
             [country]="country.value"
             (countryChange)="country.setValue($event)"
           ></minds-country-input>
-          <!-- <m-countryInput
-        type="text"
-        id="country"
-        name="country"
-        formControlName="country"
-        class="form-control"
-        data-minds="country"
-        [allowedCountries]="allowedCountries"
-        [initCountryCode]="country.value"
-        (countryChange)="country.setValue($event)"
-      ></m-countryInput > -->
         </div>
       </div>
-      <!-- ***INPUT ACCOUNT NUMBER -->
+      <!-- -------------------------------------------- -->
+      <!--- INPUT - ACCOUNT NUMBER  ---------------------->
+      <!-- -------------------------------------------- -->
       <div class="m-walletForm__field--text stretchedField">
         <div class="m-walletForm__row--label">
           <label for="accountNumber" i18n>Bank Account Number / IBAN</label
@@ -49,7 +55,9 @@
           />
         </div>
       </div>
-      <!-- ***INPUT ROUTING NUMBER -->
+      <!-- -------------------------------------------- -->
+      <!--- INPUT - ROUTING NUMBER  ---------------------->
+      <!-- -------------------------------------------- -->
       <div class="m-walletForm__field--text stretchedField">
         <div class="m-walletForm__row--label">
           <label for="routingNumber" i18n>Routing Number / Sort Code</label>
@@ -66,44 +74,54 @@
           />
         </div>
       </div>
-      <!-- ERROR -------------- -->
+      <!-- -------------------------------------------- -->
+      <!--- ERROR ---------------------------------------->
+      <!-- -------------------------------------------- -->
       <p class="m-walletTertiaryText--error">
         {{ error }}
       </p>
-      <!-- FORM BUTTONS -------------- -->
-      <div class="m-walletForm__buttonsContainer">
-        <m-shadowboxSubmitButton
-          (click)="showModal = true; modalContent = 'leaveEditMode'"
-          [disabled]="inProgress"
-          color="grey"
-          >Cancel</m-shadowboxSubmitButton
-        >
-        <m-shadowboxSubmitButton (click)="addBank()" [disabled]="inProgress"
-          >Add Bank Account</m-shadowboxSubmitButton
-        >
-      </div>
-    </form>
-    <!-- BANK ACCOUNT IS ALREADY SET UP ------------------ -->
-    <ng-container *ngIf="hasBankAccount() && !editing">
-      <div class="m-walletSettingsView--hasAccount__accountSummary">
-        <p>Your bank account where cash rewards are deposited.</p>
-        <div class="m-walletSettingsView--hasAccount__detailsWrapper">
-          <div class="m-walletSettingsView--hasAccount__bankWrapper">
-            <span>
-              {{ account.bankAccount.bank_name }}
-            </span>
-            <span>****{{ account.bankAccount.last4 }}</span>
-          </div>
-          <div class="m-walletSettingsView--hasAccount__linksContainer">
-            <a (click)="enterEditMode()">Update</a>
-            <a (click)="showModal = true; modalContent = 'removeBank'"
-              >Remove</a
-            >
-          </div>
+    </div>
+    <!-- -------------------------------------------- -->
+    <!--- FORM BUTTONS --------------------------------->
+    <!-- -------------------------------------------- -->
+    <div class="m-walletForm__buttonsContainer">
+      <m-shadowboxSubmitButton
+        (click)="showModal = true; modalContent = 'leaveEditMode'"
+        [disabled]="inProgress"
+        color="grey"
+        >Cancel</m-shadowboxSubmitButton
+      >
+      <m-shadowboxSubmitButton
+        (click)="addBank()"
+        [disabled]="inProgress || form.invalid"
+        [saving]="inProgress"
+        >Add Bank Account</m-shadowboxSubmitButton
+      >
+    </div>
+  </form>
+  <!-- -------------------------------------------- -->
+  <!--- BANK ACCOUNT ALREADY SET UP ------------------>
+  <!-- -------------------------------------------- -->
+  <ng-container *ngIf="hasBankAccount() && !editing">
+    <div class="m-walletSettingsView--hasAccount__accountSummary">
+      <p>Your bank account where cash rewards are deposited.</p>
+      <div class="m-walletSettingsView--hasAccount__detailsWrapper">
+        <div class="m-walletSettingsView--hasAccount__bankWrapper">
+          <span>
+            {{ account.bankAccount.bank_name }}
+          </span>
+          <span>****{{ account.bankAccount.last4 }}</span>
+        </div>
+        <div class="m-walletSettingsView--hasAccount__linksContainer">
+          <a (click)="enterEditMode()">Update</a>
+          <a (click)="showModal = true; modalContent = 'removeBank'">Remove</a>
         </div>
       </div>
-
-      <!-- <div class="m-walletSettingsView--hasAccount__leaveMonetization">
+    </div>
+    <!-- -------------------------------------------- -->
+    <!--- LEAVE MONETIZATION BUTTON  ------------------->
+    <!-- -------------------------------------------- -->
+    <!-- <div class="m-walletSettingsView--hasAccount__leaveMonetization">
         <h2>Leave Monetization Program</h2>
         <p>
           For security reasons, you won't be able to rejoin the monetization
@@ -115,38 +133,67 @@
           >Leave Monetization Program</m-shadowboxSubmitButton
         >
       </div> -->
-    </ng-container>
-    <!-- CONFIRMATION MODAL: LEAVE EDIT MODE -------------------- -->
-    <m-walletModal
-      class="m-walletModal--confirmation"
-      [showModal]="showModal && modalContent === 'leaveEditMode'"
-      (closeModal)="showModal = false"
-    >
-      <p>
-        Are you sure you want to stop? Any bank information you've entered will
-        be lost.
-      </p>
+  </ng-container>
+  <!-- -------------------------------------------- -->
+  <!--- CONFIRMATION MODAL: LEAVE EDIT MODE ---------->
+  <!-- -------------------------------------------- -->
+  <m-walletModal
+    class="m-walletModal--confirmation"
+    [showModal]="showModal && modalContent === 'leaveEditMode'"
+    (closeModal)="showModal = false"
+  >
+    <p class="m-walletTertiaryText--desc">
+      Are you sure you want to stop? Any bank information you've entered will be
+      lost.
+    </p>
 
-      <div class="m-walletForm__buttonsContainer">
-        <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
-          >Cancel</m-shadowboxSubmitButton
-        >
-        <m-shadowboxSubmitButton
-          color="red"
-          (click)="leaveEditMode()"
-          [disabled]="inProgress"
-          [saving]="inProgress"
-          >I'm sure</m-shadowboxSubmitButton
-        >
-      </div>
-    </m-walletModal>
-    <!-- CONFIRMATION MODAL: LEAVE MONETIZATION -------------------- -->
-    <m-walletModal
+    <div class="m-walletForm__buttonsContainer">
+      <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
+        >Cancel</m-shadowboxSubmitButton
+      >
+      <m-shadowboxSubmitButton
+        color="red"
+        (click)="leaveEditMode()"
+        [disabled]="inProgress"
+        [saving]="inProgress"
+        >I'm sure</m-shadowboxSubmitButton
+      >
+    </div>
+  </m-walletModal>
+  <!-- -------------------------------------------- -->
+  <!--- CONFIRMATION MODAL: REMOVE BANK -------------->
+  <!-- -------------------------------------------- -->
+  <m-walletModal
+    class="m-walletModal--confirmation"
+    [showModal]="showModal && modalContent === 'removeBank'"
+    (closeModal)="showModal = false"
+  >
+    <p class="m-walletTertiaryText--desc">
+      Are you sure you want to remove your bank account information? You won't
+      be able to receive payments until you add another one.
+    </p>
+    <div class="m-walletForm__buttonsContainer">
+      <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
+        >Cancel</m-shadowboxSubmitButton
+      >
+      <m-shadowboxSubmitButton
+        color="red"
+        (click)="removeBank()"
+        [disabled]="inProgress"
+        [saving]="inProgress"
+        >I'm sure</m-shadowboxSubmitButton
+      >
+    </div>
+  </m-walletModal>
+  <!-- -------------------------------------------- -->
+  <!--- CONFIRMATION MODAL: LEAVE MONETIZATION ---------->
+  <!-- -------------------------------------------- -->
+  <!-- <m-walletModal
       class="m-walletModal--confirmation"
       [showModal]="showModal && modalContent === 'leaveMonetization'"
       (closeModal)="showModal = false"
     >
-      <p>
+      <p class="m-walletTertiaryText--desc">
         Are you sure you want to leave the monetization program? You won't be
         able to rejoin again.
       </p>
@@ -162,32 +209,11 @@
           >I'm sure</m-shadowboxSubmitButton
         >
       </div>
-    </m-walletModal>
-    <!-- CONFIRMATION MODAL: REMOVE BANK -------------------- -->
-    <m-walletModal
-      class="m-walletModal--confirmation"
-      [showModal]="showModal && modalContent === 'removeBank'"
-      (closeModal)="showModal = false"
-    >
-      <p>
-        Are you sure you want to remove your bank account information? You won't
-        be able to receive payments until you add another one.
-      </p>
-      <div class="m-walletForm__buttonsContainer">
-        <m-shadowboxSubmitButton color="grey" (click)="showModal = false"
-          >Cancel</m-shadowboxSubmitButton
-        >
-        <m-shadowboxSubmitButton
-          color="red"
-          (click)="removeBank()"
-          [disabled]="inProgress"
-          [saving]="inProgress"
-          >I'm sure</m-shadowboxSubmitButton
-        >
-      </div>
-    </m-walletModal>
-  </ng-container>
+    </m-walletModal> -->
+  <!-- </ng-container>
   <ng-container *ngIf="leftMonetization">
-    <p>You have left the monetization program.</p>
-  </ng-container>
+    <p class="m-walletTertiaryText--desc">
+      You have left the monetization program.
+    </p>
+  </ng-container> -->
 </div>
