--- a/src/app/modules/wallet/v2/settings-cash/settings-cash.component.html
+++ b/src/app/modules/wallet/v2/settings-cash/settings-cash.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="inProgress" class="m-wallet__spinner">
+<div *ngIf="inProgress || !init" class="m-wallet__spinner">
   <div class="mdl-spinner mdl-js-spinner is-active" [mdl]></div>
 </div>
-<div class="m-walletSettings" *ngIf="!inProgress">
+<div class="m-walletSettings" *ngIf="!inProgress && init">
   <h2>Bank Information</h2>
   <!-- ONBOARDING FORM ------------------ -->
   <m-walletCashOnboarding
