(fix): remove margins

--- a/src/app/modules/newsfeed/newsfeed.component.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.scss
@@ -18,6 +18,9 @@ m-newsfeed {
   }
 }
 
+.m-grid .m-newsfeed.mdl-grid {
+  margin: unset;
+}
 .m-newsfeed {
   max-width: 1280px;
   flex-wrap: nowrap;
