--- a/src/app/modules/pro/marketing.component.scss
+++ b/src/app/modules/pro/marketing.component.scss
@@ -1,18 +1,22 @@
-.m-pro__marketing {
-  .m-marketing--hero--slogans ul {
-    font-size: 20px;
-    padding: 0 0 0 16px;
-    margin: 32px 0;
+m-pro__marketing {
+  grid-area: content / span 2;
 
-    @include m-theme() {
-      color: themed($m-white);
-    }
+  .m-pro__marketing {
+    .m-marketing--hero--slogans ul {
+      font-size: 20px;
+      padding: 0 0 0 16px;
+      margin: 32px 0;
 
-    li {
-      margin-bottom: 8px;
+      @include m-theme() {
+        color: themed($m-white);
+      }
 
-      &:last-child {
-        margin-bottom: 0;
+      li {
+        margin-bottom: 8px;
+
+        &:last-child {
+          margin-bottom: 0;
+        }
       }
     }
   }
