--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -92,8 +92,8 @@ $themes: (
     m-textColor--primary: #4f4f50,
     m-textColor--secondary: #7d7d82,
     m-textColor--tertiary: #9b9b9b,
-    m-bgColor--primary: #ffffff,
-    m-bgColor--secondary: #f5f5f5,
+    m-bgColor--primary: #f5f5f5,
+    m-bgColor--secondary: #ffffff,
     m-bgColor--tertiary: #e3e4e9,
     m-borderColor--primary: #dce2e4,
     m-borderColor--secondary: #979797,
