--- a/src/app/common/layout/sidebar/navigation.component.scss
+++ b/src/app/common/layout/sidebar/navigation.component.scss
@@ -33,6 +33,36 @@ m-sidebar--navigation {
     }
   }
 
+  .m-sidebarNavigation__user {
+    a {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+      font-size: 17px;
+      line-height: 44px;
+      text-decoration: none;
+      cursor: pointer;
+
+      @include m-theme() {
+        color: themed($m-textColor--secondary);
+      }
+
+      &:hover {
+        @include m-theme() {
+          color: themed($m-black);
+        }
+      }
+
+      img {
+        width: 26px;
+        height: 26px;
+        border-radius: 50%;
+
+        margin-right: 28px;
+      }
+    }
+  }
+
   .m-sidebar--navigation {
     grid-area: nav;
 
@@ -94,8 +124,12 @@ m-sidebar--navigation {
         }
       }
 
+      .m-sidebarNavigation__user {
+        padding-top: 37px;
+      }
+
       ul {
-        padding: 37px 35px 0;
+        padding: 0 35px 0;
 
         .m-sidebar--navigation--item {
           margin: 4px 0;
@@ -144,8 +178,11 @@ m-sidebar--navigation {
       }
     }
 
-    i.material-icons {
-      margin-right: 30px;
+    m-tooltip {
+      i.material-icons,
+      img {
+        margin-right: 30px;
+      }
     }
   }
 }
